--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="http://ihoney.pe.kr">허니몬(Honeymon)의 달콤한 비행</a></li>
+  <li><a href="http://java.ihoney.pe.kr">허니몬(Honeymon)의 자바guru</a></li>
 </ul>
